# SupportPilot-AI

./: .gitignore  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_STEPS.md  LICENSE  Makefile  README.md  SECURITY_FINDINGS_REPORT.md  deploy.sh  docker-compose.yml  railway.toml
backend/: .dockerignore  .env  .env.example  Dockerfile  Procfile  alembic.ini  docker-compose.prod.yml  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_embedding_column.py  003_add_chat_assigned_to_and_mode.py
backend/app/: __init__.py  config.py  main.py  worker.py
backend/app/ai/: __init__.py  factory.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  cache.py  database.py  event_bus.py  exceptions.py  feature_flags.py  metrics.py  middleware.py  monitoring.py  outbox.py  rate_limit.py  rate_limit_middleware.py  rbac.py  security.py  task_queue.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  canned_response.py  chat.py  chat_tag.py  conversation_rating.py  document_chunk.py  knowledge_gap.py  knowledge_source.py  member.py  message.py  subscription.py  usage_metric.py  user.py  webhook.py  widget_config.py  workspace.py
backend/app/repositories/: __init__.py  base.py  document_repo.py  member_repo.py  workspace_repo.py
backend/app/schemas/: __init__.py  (+9 more)
backend/db/: schema.sql
backend/monitoring/: prometheus.yml
backend/scripts/: demo_data.py  list_routes.py  seed.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_workspaces.py
(+193 files in other folders)
